Fix path overlap in logo SVGs

--- a/css/style.css
+++ b/css/style.css
@@ -837,9 +837,6 @@ body#index[data-lang=fr] {
 body#index[data-lang=fr] #langSelect:hover {
   box-shadow: 0 0 0.25rem 0.25rem rgb(0, 0, 255);
 }
-body#index[data-lang=fr] #mobileHeader {
-  background-color: rgb(0, 20, 0);
-}
 @media (min-width: 769px) {
   body#index[data-lang=fr] #mobileHeader {
     box-shadow: none;
@@ -848,6 +845,9 @@ body#index[data-lang=fr] #mobileHeader {
 }
 body#index[data-lang=fr] #navigationToggle {
   background-image: url("../images/svg/icons/buttons/hamburger-icon-fr.svg");
+}
+body#index[data-lang=fr] #navBarItems li:hover {
+  text-shadow: 0 0 0.55rem rgb(0, 0, 255);
 }
 body#index[data-lang=fr] .shadow {
   box-shadow: 0 0 0.25rem 0.25rem rgb(0, 0, 255);
@@ -876,9 +876,6 @@ body#index[data-lang=zh] {
 body#index[data-lang=zh] #langSelect:hover {
   box-shadow: 0 0 0.25rem 0.25rem rgb(255, 0, 0);
 }
-body#index[data-lang=zh] #mobileHeader {
-  background-color: rgb(20, 20, 0);
-}
 @media (min-width: 769px) {
   body#index[data-lang=zh] #mobileHeader {
     box-shadow: none;
@@ -887,6 +884,9 @@ body#index[data-lang=zh] #mobileHeader {
 }
 body#index[data-lang=zh] #navigationToggle {
   background-image: url("../images/svg/icons/buttons/hamburger-icon-zh.svg");
+}
+body#index[data-lang=zh] #navBarItems li:hover {
+  text-shadow: 0 0 0.55rem rgb(255, 0, 0);
 }
 body#index[data-lang=zh] .shadow {
   box-shadow: 0 0 0.25rem 0.25rem rgb(255, 0, 0);
