--- a/sass/components/_languages.scss
+++ b/sass/components/_languages.scss
@@ -58,7 +58,7 @@ body#index[data-lang='zh'] {
     }
 
     #mobileHeader {
-        background-color: rgb(20, 20, 0);
+        // background-color: rgb(20, 20, 0);
 
         @media (min-width: 769px) {
             box-shadow: none;
